# vp26

./: .gitignore  README.md  start-vp26-dev.bat
.github/workflows/: deploy-pages.yml  desktop-build.yml
backend/: .env.example  requirements.txt  sidecar.py
backend/app/: config.py  demo_data.py  main.py  schemas.py  serializers.py
docs/: ubuntu-deb-build.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/scripts/: build-linux-deb.sh  build-sidecar.mjs
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  native.ts  types.ts  ui.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.sidecar-build/spec/: vp26-backend.spec
frontend/src-tauri/.sidecar-build/work/vp26-backend/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-vp26-backend.txt  xref-vp26-backend.html
frontend/src-tauri/capabilities/: default.json  desktop.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: auth-screen.tsx  connection-fields.tsx  linux-window-chrome.tsx  workspace-screen.tsx
scripts/: publish-pages-backend.ps1
