[package]
name = "app"
version = "0.1.19"
description = "Moderner Vertretungsplan-Client fuer Indiware und VpMobil24"
authors = ["NSRS"]
license = "Proprietary"
repository = "https://github.com/center2055/vp26"
homepage = "https://center2055.github.io/vp26/"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2.5.7"
